# Frogfood

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflow/: cmake.yml
.github/workflows/: cmake.yml
data/config/: defaultLayout.ini
data/models/: simple_scene.glb
data/shaders/: BasicTypes.h.glsl  Billboard.frag.glsl  Billboard.vert.glsl  BillboardSprite.frag.glsl  BillboardSprite.vert.glsl  CalibrateHdr.comp.glsl  Color.h.glsl  Config.h.glsl  Config.shared.h  Debug.vert.glsl  Flat.frag.glsl  FullScreenTri.vert.glsl  GlobalUniforms.h.glsl  Hash.h.glsl  Light.h.glsl  Math.h.glsl  Pbr.h.glsl  Resources.h.glsl  ShadeDeferred.frag.glsl  ShadeDeferredPbr.frag.glsl  ShadeDeferredPbr.h.glsl  Texture.frag.glsl  TonemapAndDither.comp.glsl  TonemapAndDither.frag.glsl  Utility.h.glsl  Visbuffer.comp.glsl  Visbuffer.frag.glsl  Visbuffer.vert.glsl  VisbufferResolve.frag.glsl
data/shaders/ao/rtao/: RayTracedAO.comp.glsl
data/shaders/atmosphere/: AtmosphereCommon.shared.h
data/shaders/auto_exposure/: AutoExposureCommon.h.glsl  GenerateLuminanceHistogram.comp.glsl  ResolveLuminanceHistogram.comp.glsl
data/shaders/bloom/: BloomCommon.h.glsl  BloomDownsample.comp.glsl  BloomDownsampleCommon.h.glsl  BloomDownsampleLowPass.comp.glsl  BloomUpsample.comp.glsl
data/shaders/debug/: Debug.vert.glsl  DebugAabb.vert.glsl  DebugCommon.h.glsl  DebugRect.vert.glsl  Forward.frag.glsl  Forward.vert.glsl  VertexColor.frag.glsl
data/shaders/debug/viewer/: VsmBitmaskHzb.frag.glsl  VsmDebugPageTable.frag.glsl  VsmOverdrawHeatmap.frag.glsl  VsmPhysicalPages.frag.glsl
data/shaders/denoising/spatial/: Bilateral.h.glsl  Common.h.glsl  Modulate.comp.glsl
data/shaders/hzb/: HZBCommon.h.glsl  HZBCopy.comp.glsl  HZBReduce.comp.glsl
data/shaders/imgui/: imgui.frag.glsl  imgui.vert.glsl
data/shaders/post/: TonemapAndDither.comp.glsl  TonemapAndDither.shared.h
data/shaders/raytracing/: Test.rgen.glsl
data/shaders/shadows/: ShadowMain.vert.glsl
data/shaders/shadows/vsm/: VsmAllocRequest.h.glsl  VsmAllocatePages.comp.glsl  VsmClearDirtyPages.comp.glsl  VsmCommon.h.glsl  VsmFreeNonVisiblePages.comp.glsl  VsmInitStencil.frag.glsl  VsmListDirtyPages.comp.glsl  VsmMarkVisiblePages.comp.glsl  VsmReduceBitmaskHzb.comp.glsl  VsmResetPageVisibility.comp.glsl  VsmShadow.frag.glsl
data/shaders/visbuffer/: Common.h.glsl  CullMeshlets.comp.glsl  CullMeshlets.h.glsl  CullTriangles.comp.glsl  Visbuffer.comp.glsl  Visbuffer.frag.glsl  Visbuffer.vert.glsl  VisbufferCommon.h.glsl  VisbufferMaterialDepth.frag.glsl  VisbufferResolve.frag.glsl  VisbufferResolve.vert.glsl
data/shaders/voxels/: Forward.frag.glsl  Forward.h.glsl  Forward.vert.glsl  SimpleRayTracer.comp.glsl  SimpleRayTracer.frag.glsl  Voxels.h.glsl
data/textures/: rain_mie_data.txt
scripts/: AnalyzeComdat.bat
src/: Application.cpp  Application.h  FrogRenderer.cpp  FrogRenderer.h  FrogRenderer2.cpp  FrogRenderer2.h  Gui.cpp  HashUtilities.h  MathUtilities.cpp  MathUtilities.h  PCG.h  PipelineManager.cpp  PipelineManager.h  Pipelines.cpp  Pipelines.h  Pipelines2.cpp  Pipelines2.h  Renderables.h  RendererUtilities.cpp  RendererUtilities.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  main.cpp
src/Fvog/: AccelerationStructure.cpp  AccelerationStructure.h  BasicTypes2.h  Buffer2.cpp  Buffer2.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  Pipeline2.cpp  Pipeline2.h  Rendering2.cpp  Rendering2.h  Shader2.cpp  Shader2.h  Texture2.cpp  Texture2.h  Timer2.cpp  Timer2.h  TriviallyCopyableByteSpan.h
src/Fvog/detail/: ApiToEnum2.cpp  ApiToEnum2.h  Common.cpp  Common.h  Flags.h  Hash2.h  SamplerCache2.cpp  SamplerCache2.h  VmaFwd.h
src/ImGui/: imgui_impl_fvog.cpp  imgui_impl_fvog.h
src/Voxels/: Assets.cpp  Assets.h  ClassImplMacros.h  Game.cpp  Game.h  HashGrid.h  Input.cpp  Input.h  LRUCache.h  Pathfinding.cpp  Pathfinding.h  Physics.cpp  Physics.h  PlayerHead.cpp  PlayerHead.h  Prefab.cpp  Prefab.h  Reflection.cpp  Reflection.h  Serialization.cpp  Serialization.h  SketchyBuffer.cpp  SketchyBuffer.h  TwoLevelGrid.cpp  TwoLevelGrid.h  VoxelRenderer.cpp  VoxelRenderer.h
src/Voxels/Physics/: DebugRenderer.cpp  DebugRenderer.h  Physics.cpp  Physics.h  PhysicsUtils.cpp  PhysicsUtils.h  TwoLevelGridShape.cpp  TwoLevelGridShape.h
src/debug/: ForwardRenderer.cpp  ForwardRenderer.h  Shapes.h
src/techniques/: Atmosphere.cpp  Atmosphere.h  AutoExposure.cpp  AutoExposure.h  Bloom.cpp  Bloom.h  VirtualShadowMaps.cpp  VirtualShadowMaps.h
src/techniques/ao/: RayTracedAO.cpp  RayTracedAO.h
src/techniques/denoising/spatial/: Bilateral.cpp  Bilateral.h
